2009-04-30  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php:
	- Completely revamped to utilize Zero Clipboard by jhuckaby.
	  No more "mozilla not supported" thing.

2009-04-30  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- No need to use DIRECTORY_SEPARATOR.

2009-04-08  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- Cosmetic word changes.

2009-04-05  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, scorerender-admin.php:
	- Drop IE warning option, add IE translucency option instead.

2009-03-26  Abel Cheung  <abelcheung@gmail.com>

	* iepngfix.php, blank.gif:
	- Incorporate IE PNG Alpha Fix v2.0alpha3 from
	  http://www.twinhelix.com/css/iepngfix/
	* wp-scorerender.php (scorerender_add_ie6_style):
	- Add relevant CSS style for IE <= 6.

2009-03-25  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php, scorerender-admin.php:
	- If web host disabled certain PHP process execution functions, just
	  display warning message instead of running into fatal error.

2009-01-18  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- (_exec) Replace batch file creation hack with "cmd /c : &" hack,
	  which is not as fragile as batch file creation and deletion.
	* notation/mup.php:
	- (conversion_step1) Adjust temp license file creation routine, since
	  batch file is no more used.

2008-10-05  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-utils.php:
	- (wp_parse_str) Taken from WordPress for backword compat with WP 2.2

	* wp-scorerender.php, scorerender-admin.php:
	- Move all admin related stuff to scorerender-admin.php, and only
	  include them if WP_ADMIN is defined (inside admin page).

	* wp-scorerender.php:
	- (scorerender_get_def_settings, scorerender_populate_options) Move
	  default setting into functions, for some unknown reason global
	  variables disappear upon plugin activation, thereby rendering
	  default settings to nil. Fix plugin upgrade.
