@@ -4,6 +4,9 @@
 	- Completely revamped to utilize Zero Clipboard by jhuckaby.
 	  No more "mozilla not supported" thing.
 
+	* misc/ZeroClipbard.js, misc/ZeroClipboard.swf:
+	- New files.
+
 2009-04-30  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php:
